--- a/pages/files.html
+++ b/pages/files.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap" rel="stylesheet" />
-    <link rel="icon" type="image/png" sizes="192x192"  href="./imgs/android-icon-192x192.png">
-    <title>Dachboard</title>
+    <link rel="icon" type="image/png" sizes="192x192"  href="../imgs/android-icon-192x192.png">
+    <title>Files</title>
 </head>
 <body>
     <div class="container">
@@ -86,12 +86,264 @@
                 </nav>
             </header>
             <!--End Header-->
-                        <!--Start Content-->
-            <h1 class="main-title">Dashboard</h1>
-            <div class="content">
-                <div class="parent" style="background-color: red; height: 300px;">
+            <!--Start Content-->
+            <h1 class="main-title">Files</h1>
+            <div class=" files-content">
+            <div class="files-parent ">
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/pdf.svg" alt="">
+                        <span>my-file.eps</span>
+                    </div>
+                    <span class="uploader">Elzero</span>
+                    <div class="file-child-foot">
+                        <span>20/06/2020</span>
+                        <span>5.5MB</span>
+                    </div>
                 </div>
-                <div class="child" style="background-color: blue;  height: 250px;"></div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/avi.svg" alt="">
+                        <span>my-file.avi</span>
+                    </div>
+                    <span class="uploader">Admin</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>12.5MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/eps.svg" alt="">
+                        <span>my-file.eps</span>
+                    </div>
+                    <span class="uploader">Uploader</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>2.7MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/psd.svg" alt="">
+                        <span>my-file.psd</span>
+                    </div>
+                    <span class="uploader">Osama</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>15.1MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/dll.svg" alt="">
+                        <span>my-file.dll</span>
+                    </div>
+                    <span class="uploader">Coder</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>2.2MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/pdf.svg" alt="">
+                        <span>my-file.png</span>
+                    </div>
+                    <span class="uploader">Designer</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>1.1MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/dll.svg" alt="">
+                        <span>my-file.dll</span>
+                    </div>
+                    <span class="uploader">Coder</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>2.2MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/png.svg" alt="">
+                        <span>my-file.png</span>
+                    </div>
+                    <span class="uploader">Designer</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>1.1MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/psd.svg" alt="">
+                        <span>my-file.psd</span>
+                    </div>
+                    <span class="uploader">Osama</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>15.1MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/pdf.svg" alt="">
+                        <span>my-file.pdf</span>
+                    </div>
+                    <span class="uploader">Elzero</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>5.5MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/avi.svg" alt="">
+                        <span>my-file.avi</span>
+                    </div>
+                    <span class="uploader">Admin</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>12.5MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/eps.svg" alt="">
+                        <span>my-file.eps</span>
+                    </div>
+                    <span class="uploader">Uploader</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>2.7MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/pdf.svg" alt="">
+                        <span>my-file.pdf</span>
+                    </div>
+                    <span class="uploader">Elzero</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>5.5MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/avi.svg" alt="">
+                        <span>my-file.avi</span>
+                    </div>
+                    <span class="uploader">Admin</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>12.5MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/eps.svg" alt="">
+                        <span>my-file.eps</span>
+                    </div>
+                    <span class="uploader">Uploader</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>2.7MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/psd.svg" alt="">
+                        <span>my-file.psd</span>
+                    </div>
+                    <span class="uploader">Osama</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>15.1MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/dll.svg" alt="">
+                        <span>my-file.dll</span>
+                    </div>
+                    <span class="uploader">Coder</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>2.2MB</span>
+                    </div>
+                </div>
+                <div class="files-child f">
+                    <i class="fa-solid fa-download c-grey p-absolute"></i>
+                    <div class="file-pdf">
+                        <img src="../imgs/png.svg" alt="">
+                        <span>my-file.png</span>
+                    </div>
+                    <span class="uploader">Designer</span>
+                    <div class="file-child-foot">
+                        <span>16/5/2021</span>
+                        <span>1.1MB</span>
+                    </div>
+                </div>
+            </div>
+            <div class="files-statices box f">
+                <div class="main-text">
+                    <h3>Files Statistics</h3>
+                </div>
+                <div class="static-box f">
+                    <span>
+                        <i class="fa-regular fa-file-pdf fa-lg blue center-flex c-blue icon"></i>
+                        <h5>PDF Files <p>130</p></h5>
+                    </span>
+                    <span>6.5GB</span>
+                </div>
+                <div class="static-box f">
+                    <span>
+                        <i class="fa-regular fa-images fa-lg green center-flex c-green icon"></i>
+                        <h5>PDF Files <p>130</p></h5>
+                    </span>
+                    <span>6.5GB</span>
+                </div>
+                <div class="static-box f">
+                    <span>
+                        <i class="fa-regular fa-file-word fa-lg red center-flex c-red icon"></i>
+                        <h5>PDF Files <p>130</p></h5>
+                    </span>
+                    <span>6.5GB</span>
+                </div>
+                <div class="static-box f">
+                    <span>
+                        <i class="fa-solid fa-file-csv fa-lg orange center-flex c-orange icon"></i>
+                        <h5>PDF Files <p>130</p></h5>
+                    </span>
+                    <span>6.5GB</span>
+                </div>
+                <a href="#">
+                    <i class="fa-solid fa-angles-up mr-10"></i>
+                    Upload
+                </a>
+            </div>
             </div>
             <!--End Content-->
         </section>
