Add Profile Page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -86,12 +86,116 @@
                 </nav>
             </header>
             <!--End Header-->
-                        <!--Start Content-->
-            <h1 class="main-title">Dashboard</h1>
-            <div class="content">
-                <div class="parent" style="background-color: red; height: 300px;">
+            <!--Start Content-->
+            <h1 class="main-title">Profile</h1>
+            <div class="content-profile">
+                <div class="profile-up box f" >
+                    <div class="profile-up-side f">
+                        <img src="../imgs/avatar.png" alt="">
+                        <h3 class="f">Osama Elzero<p>Level 20</p></h3>
+                        <div class="profile-progres">
+                            <span style="width: 80%;"></span>
+                        </div>
+                            <div class="rate-profile f">
+                                <i class="fa-solid fa-star c-orange fs-13"></i>
+                                <i class="fa-solid fa-star c-orange fs-13"></i>
+                                <i class="fa-solid fa-star c-orange fs-13"></i>
+                                <i class="fa-solid fa-star c-orange fs-13"></i>
+                                <i class="fa-solid fa-star c-orange fs-13"></i>
+                            </div>
+                            <span>550 Rating</span>
+                        
+                    </div>
+                    <div class="profile-up-content">
+                        <div class="profile-up-content-box f">
+                            <div class="information-col-1 f">
+                                <h5>General Information</h5>
+                                <div class="f">
+                                    <h5>Full Name</h5>
+                                    <h4>Osama Mohamed</h4>
+                                </div>
+                                <div class="on-off-button">
+                                    <input checked type="checkbox" name="" id="on-btn-1">
+                                    <label for="on-btn-1"></label>
+                                </div>
+                            </div>
+                            <div class="information-col-2 f">
+                                <p>Gender</p>
+                                <span>Male</span>
+                            </div>
+                            <div class="information-col-2 f">
+                                <p>Country</p>
+                                <span>Egypt</span>
+                            </div>
+                        </div>
+                        <div class="profile-up-content-box f">
+                            <div class="information-col-1 f">
+                                <h5>Personal Information</h5>
+                                <div class="f">
+                                    <h5>Email: </h5>
+                                    <h4> o@nn.sa</h4>
+                                </div>
+                                <div class="on-off-button">
+                                    <input type="checkbox" name="" id="on-btn-2">
+                                    <label for="on-btn-2"></label>
+                                </div>
+                            </div>
+                            <div class="information-col-2 f">
+                                <p>Phone:</p>
+                                <span> 019123456789</span>
+                            </div>
+                            <div class="information-col-2 f">
+                                <p>Date Of Birth:</p>
+                                <span>25/10/1982</span>
+                            </div>
+                        </div>
+                        <div class="profile-up-content-box f">
+                            <div class="information-col-1 f">
+                                <h5>Job Information</h5>
+                                <div class="f">
+                                    <h5>Title: </h5>
+                                    <h4>Full Stack Developer</h4>
+                                </div>
+                                <div class="on-off-button">
+                                    <input checked type="checkbox" name="" id="on-btn-3">
+                                    <label for="on-btn-3"></label>
+                                </div>
+                            </div>
+                            <div class="information-col-2 f">
+                                <p>Programming Language: </p>
+                                <span>Python</span>
+                            </div>
+                            <div class="information-col-2 f">
+                                <p>Years Of Experience: </p>
+                                <span>15+</span>
+                            </div>
+                        </div>
+                        <div class="profile-up-content-box f">
+                            <div class="information-col-1 f">
+                                <h5>Billing Information</h5>
+                                <div class="f">
+                                    <h5>Payment Method:</h5>
+                                    <h4>Paypal</h4>
+                                </div>
+                                <div class="on-off-button">
+                                    <input type="checkbox" name="" id="on-btn-4">
+                                    <label for="on-btn-4"></label>
+                                </div>
+                            </div>
+                            <div class="information-col-2 f">
+                                <p>Email:</p>
+                                <span>email@website.com</span>
+                            </div>
+                            <div class="information-col-2 f">
+                                <p>Subscription: </p>
+                                <span> Monthly</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="child" style="background-color: blue;  height: 250px;"></div>
+                <div class="child-1" >Childone</div>
+                <div class="child-2">child-2</div>
+            
             </div>
             <!--End Content-->
         </section>
